<resources>
    <string name="app_name">My Application</string>
    <string name="AC">AC</string>
    <string name="Tangent">Tan</string>
    <string name="Sine">sin</string>
    <string name="Cosine">Cos</string>
    <string name="Addition">+</string>
    <string name="Subtraction">-</string>
    <string name="Mutiplication">*</string>
    <string name="Division">/</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Zero">0</string>
    <string name="Dot">.</string>
    <string name="Equal">=</string>
</resources>

