<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="75"
    tools:context=".MainActivity">
    
    <TextView
        android:id="@+id/tvCalculation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:textSize="20sp"
        android:background="@color/black"
        android:textColor="#EDE9E9"
        android:gravity="right|bottom"/>
    
    
    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:background="@color/black"
        android:textSize="30sp"
        android:gravity="right|bottom"
        android:textColor="@color/white"
        android:layout_gravity=""
        android:text=""
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="10"
        android:weightSum="5">

        
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/ac"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="#1b382d"
            android:text="@string/AC"
            android:textSize="20sp"
            android:textColor="@color/white"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/tangent"
            android:onClick="operatorBtnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="#1b382d"
            android:text="@string/Tangent"
            android:textSize="20sp"
            android:textColor="@color/white"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/cosine"
            android:onClick="operatorBtnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="#1b382d"
            android:text="@string/Cosine"
            android:textSize="20sp"
            android:textColor="@color/white"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/sine"
            android:onClick="operatorBtnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="#1b382d"
            android:text="@string/Sine"
            android:textSize="20sp"
            android:textColor="@color/white"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/ce"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="#1b382d"
            android:text="CE"
            android:textSize="20sp"
            android:textColor="@color/white"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="10"
        android:weightSum="4">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/seven"
            android:onClick="btnDigitClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@color/buttons"
            android:text="@string/Seven"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/eight"
            android:onClick="btnDigitClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@color/buttons"
            android:text="@string/Eight"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/nine"
            android:onClick="btnDigitClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@color/buttons"
            android:text="@string/Nine"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/multiply"
            android:onClick="operatorBtnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@color/rightOperator"
            android:text="@string/Mutiplication"
            android:textSize="20sp"
            android:textColor="@color/black"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="10"
        android:weightSum="4">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/four"
            android:onClick="btnDigitClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@color/buttons"
            android:text="@string/Four"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/five"
            android:onClick="btnDigitClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@color/buttons"
            android:text="@string/Five"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/six"
            android:onClick="btnDigitClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@color/buttons"
            android:text="@string/Six"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/division"
            android:onClick="operatorBtnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@color/rightOperator"
            android:text="@string/Division"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="10"
        android:weightSum="4">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/one"
            android:onClick="btnDigitClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@color/buttons"
            android:text="@string/One"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/two"
            android:onClick="btnDigitClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@color/buttons"
            android:text="@string/Two"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/three"
            android:onClick="btnDigitClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@color/buttons"
            android:text="@string/Three"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/subtraction"
            android:onClick="operatorBtnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@color/rightOperator"
            android:text="@string/Subtraction"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="10"
        android:weightSum="4">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/dot"
            android:onClick="btnDigitClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@color/buttons"
            android:text="@string/Dot"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/zero"
            android:onClick="btnDigitClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@color/buttons"
            android:text="@string/Zero"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/equal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@color/topOperator"
            android:text="@string/Equal"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/addition"
            android:onClick="operatorBtnClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:background="@color/rightOperator"
            android:text="@string/Addition"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
    </LinearLayout>

</LinearLayout>